force-app/main/default/objects/Mobile_Logs__c/Mobile_Logs__c.object-meta.xml
<CustomObject>
    <label>Mobile_Log</label>
    <nameField>
        <label>Mobile_Logs Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Mobile_Logs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>