force-app/main/default/objects/Mobile_Logs__c/fields/Class_Name__c.field-meta.xml
<CustomField>
    <fullName>Class_Name__c</fullName>
    <label>Class Name</label>
    <length>40</length>
    <type>Text</type>
</CustomField>