force-app/main/default/objects/Mobile_Logs__c/fields/isSuccess__c.field-meta.xml
<CustomField>
    <fullName>isSuccess__c</fullName>
    <defaultValue>false</defaultValue>
    <label>isSuccess</label>
    <type>Checkbox</type>
</CustomField>